# honesty

./: .gitignore  .vars.ini  CHANGELOG.md  MANIFEST.in  Makefile  README.md  arlib.pyi  requests_mock.pyi  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
honesty/: __main__.py  api.py  archive.py  cache.py  checker.py  cmdline.py  deps.py  releases.py  requirements.py  types.py  vcs.py  version.py
honesty/tests/: __init__.py  __main__.py  archive.py  cache.py  checker.py  cmdline.py  deps.py  releases.py  revs.py
