[metadata]
name = honesty
description = Double check sdist/bdist on pypi
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/honesty/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = honesty
include_package_data = true
setup_requires =
    setuptools_scm < 8 ; python_version<'3.11'
    setuptools_scm >= 8 ; python_version>='3.11'
    setuptools >= 38.3.0
python_requires = >=3.7

[options.package_data]
honesty = py.typed

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = honesty/*
omit = honesty/tests/*

[coverage:report]
fail_under = 96
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py37, py37-minimal, py38, py39, py310, py311, py312, coverage

[testenv]
deps = -rrequirements-dev.txt
allowlist_externals = make
commands =
    make test
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}
    MYPY_CACHE_DIR={envdir}/.mypy_cache
depends =
    coverage: py3{7,8,9,10,11,12}

[testenv:py37-minimal]
# This makes sure that thet the setup metadata has everything we need to run the
# cli.
deps=
commands =
    honesty --version

[testenv:coverage]
setenv = COVERAGE_FILE={toxworkdir}/.coverage
skip_install = True
deps = coverage
commands =
    coverage combine
    coverage report -m

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
