[metadata]
name = honesty
description = Double check sdist/bdist on pypi
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/honesty/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = honesty
setup_requires =
    setuptools_scm >= 8
    setuptools >= 65
python_requires = >=3.10
include_package_data = true

[options.extras_require]
dev =
    black == 23.12.1
    checkdeps == 0.0.2
    flake8 == 7.0.0
    mypy == 1.8.0
    tox == 4.12.1
    twine == 4.0.2
    ufmt == 2.3.0
    usort == 1.0.7
    wheel == 0.42.0
test =
    coverage >= 6

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = honesty/*
omit = honesty/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True
install_types = True

[tox:tox]
envlist = py{310,311,312}, coverage

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{310,311,312}

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
