[metadata]
name = honesty
description = Double check sdist/bdist on pypi
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/honesty/
author = Tim Hatch
author_email = tim@timhatch.com
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Utilities

[options]
packages = find:
include_package_data = true
setup_requires =
    setuptools_scm >= 8
    setuptools >= 65
python_requires = >=3.8
install_requires =
    aiohttp >= 3.6; python_version < '3.11'
    aiohttp >= 3.9; python_version >= '3.11'
    appdirs >= 1.4
    click >= 7.0
    infer-license >= 0.0.6
    packaging >= 20.3
    pkginfo >= 1.5.0
    toml >= 0.10.0
    seekablehttpfile >= 0.0.4

[options.extras_require]
dev =
    black == 23.12.1
    checkdeps == 0.0.2
    flake8 == 7.0.0
    mypy == 1.8.0
    tox == 4.12.1
    twine == 4.0.2
    ufmt == 2.3.0
    usort == 1.0.7
    wheel == 0.42.0
test =
    coverage >= 6
    setuptools >= 65 ; python_version >= '3.12'

[options.entry_points]
console_scripts =
    honesty = honesty.cmdline:cli

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = honesty/*
omit = honesty/tests/*

[coverage:report]
fail_under = 80
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True
install_types = True

[tox:tox]
envlist = py{310,311,312}, coverage

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}
    MYPY_CACHE_DIR={envdir}/.mypy_cache

[testenv:py38-minimal]
# This makes sure that thet the setup metadata has everything we need to run the
# cli.
deps=
commands =
    honesty --version

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{310,311,312}

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
